force-app/main/default/objects/WareHouse__c/WareHouse__c.object-meta.xml
<CustomObject>
    <label>WareHouse</label>
    <nameField>
        <label>WareHouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WareHouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>