force-app/main/default/objects/WareHouse__c/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <description>Location of Warehouse</description>
    <displayFormat>LOC-{0000}</displayFormat>
    <label>Location Code</label>
    <type>AutoNumber</type>
</CustomField>