force-app/main/default/objects/WareHouse__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager of the warehouse</description>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WareHouses</relationshipName>
    <type>Lookup</type>
</CustomField>