force-app/main/default/objects/WareHouse__c/fields/Present_Stock__c.field-meta.xml
<CustomField>
    <fullName>Present_Stock__c</fullName>
    <formula>Total_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Present Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>