force-app/main/default/objects/WareHouse__c/validationRules/Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Address</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Active__c ,
   ISBLANK( Address__c ) )</errorConditionFormula>
    <errorMessage>Address is required for active warehouses.</errorMessage>
</ValidationRule>