force-app/main/default/objects/WareHouse__c/validationRules/Capacity.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity</fullName>
    <active>true</active>
    <errorConditionFormula>Capacity__c &lt;=0</errorConditionFormula>
    <errorMessage>Capacity must be a positive number greater than zero</errorMessage>
</ValidationRule>