force-app/main/default/objects/WareHouse__c/validationRules/Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Country</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(  TEXT(Country__c ) )</errorConditionFormula>
    <errorMessage>Country is required</errorMessage>
</ValidationRule>