force-app/main/default/objects/WareHouse__c/validationRules/Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  NOT( ISBLANK(  Contact_Person__c ) ) ,  ISBLANK( Phone__c ) )</errorConditionFormula>
    <errorMessage>Please enter a phone number if a contact person is specified</errorMessage>
</ValidationRule>