force-app/main/default/objects/WareHouse__c/validationRules/Phone_number_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_Format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Phone__c , &quot;^\\+?[0-9\\-() ]{7,20}$&quot;))</errorConditionFormula>
    <errorMessage>Phone must be a valid format</errorMessage>
</ValidationRule>